# Phishing-GPT

./: README.md  config.ini  pyproject.toml
spo_automation/: jira_wrapper.py  logger.py  openai_wrapper.py  spo_automation.py  spo_workflow.py  templating.py  ticket_classifier.py
spo_automation/workflows/privacy/: estimating_country_risk_for_working_abroad.py  phishing_emails.py  phishing_tickets.py
spo_automation/workflows/security/: phishing_emails.py
